force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/clofor_com_cfs__Employeecontract__c.object-meta.xml
<CustomObject>
    <label>Employee Contract</label>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>