force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Article1_11__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Article1_11__c</fullName>
    <label>1.1.</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>