force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Article1_12__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Article1_12__c</fullName>
    <label>1.2.</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>