force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__ARTICLE3_31_313__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ARTICLE3_31_313__c</fullName>
    <label>3.1.3.</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>