force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__ARTICLE5_a__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ARTICLE5_a__c</fullName>
    <label>(a)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>