force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__company__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>