force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Date_of_birth__c</fullName>
    <formula>clofor_com_cfs__Employee__r.clofor_com_cfs__Birthday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>