force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Employee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>clofor_com_cfs__Employee__c</referenceTo>
    <relationshipName>Employee_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>