force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Mr_Ms__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mr_Ms__c</fullName>
    <formula>clofor_com_cfs__Employee__r.clofor_com_cfs__Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mr./Ms.:</label>
    <type>Text</type>
</CustomField>