force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Nationality__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Nationality__c</fullName>
    <formula>text( clofor_com_cfs__Employee__r.clofor_com_cfs__Nationality__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>