force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Repbymrms__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Repbymrms__c</fullName>
    <label>Rep. by Mr.Ms.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>