force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Start_probation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Start_probation__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>