force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__taxcode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__taxcode__c</fullName>
    <label>Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>