force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__Term_of_Probation_Contract__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Term_of_Probation_Contract__c</fullName>
    <label>Term of Probation Contract:</label>
    <type>TextArea</type>
</CustomField>