force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/fields/clofor_com_cfs__title__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giám đốc / Director</fullName>
                <default>true</default>
                <label>Giám đốc / Director</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>