force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/recordTypes/clofor_com_cfs__Laborcontract.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Laborcontract</fullName>
    <active>true</active>
    <label>Labor Contract</label>
</RecordType>