force-app/main/default/objects/clofor_com_cfs__Employeecontract__c/recordTypes/clofor_com_cfs__Probationcontract.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Probationcontract</fullName>
    <active>true</active>
    <label>Probation Contract</label>
</RecordType>